# flexserver

./: .gitignore  README.md
apps/lighttpd-1.4.32/: Makefile.in  config.h  config.h.in~  configure  configure.ac  libtool
config/: sample_mtcp.conf
control_plane/: control_plane.cfg  meson.build
control_plane/src/: cache.c  cache.h  config.c  config.h  core.c  core.h  debug.h  hashtable.c  hashtable.h  item.c  item.h  item_mp.c  item_queue.c  item_queue.h  log.c  log.h  meson.build  net.c  net.h  rb_tree.c  vht.c  vht.h
control_plane/tools/: CopyFiles  GenSymbolicLink  GenTestFiles  GenTestFiles.1  GenTestFiles.2  ShowNumOfOpenFile  memory_block_on_off  show_nvme_temper
data_plane/: README.md  aligned_mempool.c  aligned_mempool.h  blk.c  blk.h  chnk_ht.c  chnk_ht.h  config.c  config.h  dataplane.c  dataplane.cfg  dataplane.h  debug.c  debug.h  dpdk_io.c  dpdk_io.h  fb.c  fb.h  fht.c  fht.h  frd_offload.c  frd_offload.h  log.c  log.h  memory_mgt.c  memory_mgt.h  meson.build  meta_reply.c  meta_reply.h  rate_limit.c  rate_limit.h
mtcp/src/: Makefile  aligned_mempool.c  api.c  bundle.c  cache_buffer.c  ccp.c  core.c  cpu.c  dpdk_module.c  eth_in.c  eth_out.c  eventpoll.c  fhash.c  file_buffer.c  flex_buffer.c  flex_debug.c  frd_libaio.c  frd_liburing.c  frd_liburing_poll_mode.c  frd_liburing_sq_poll.c  frd_offload_ctrl.c  frd_posix_read.c  rss.c  (+20 more)
script/: 2client_host_params.sh  arm_mount.sh  arm_params_setup.sh  host_mount.sh  host_params_setup.sh  lighttpd_setup.sh  nvme_of_arm.sh  nvme_of_arm_2.sh  nvme_of_host_setup.sh  nvme_of_host_setup_2.sh  setup_client.sh
(+88 files in other folders)
